# granum

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: defensibility_rubric.md  judge_rubric.md
data/aetna_cardiac/: denial_templates.json  gold_appeals.jsonl  payer_personas.json  valid_citations.json
data/anthem_mental_health/: denial_templates.json  gold_appeals.jsonl  payer_personas.json  (+1 more)
docs/: COORDINATION.md  IMPLEMENTATION_PLAN.md  NEXT-SESSION.md  PRODUCT.md  STARTUP_TERMINAL_B.md  STARTUP_TERMINAL_C.md  api-contract.md  biology-mapping.md  cell-curation-methodology.md  demo-script.md  design-references.md  standup.md  storyboard.md  submission.md  voiceover.txt
research/: phoenix-mcp-audit.md
scripts/: audit_web_quality.sh  demo.sh  render_voiceover.py  seed_cell.py  smoke_gemini.py  smoke_phoenix.py
tests/: test_adversarial_denials.py  test_antigen_drift.py  test_cell.py  test_cell_embedding.py  test_coevolution_driver.py  test_coevolution_integration.py  test_coevolution_regularization.py  test_cycle_integration.py  test_defensibility_judge.py  test_denials.py  test_driver.py  test_gold.py  test_immune_memory.py  test_judge.py  test_mutation.py  test_mutation_strategies.py  test_negative_selection.py  test_payer_agent.py  test_payer_persona.py  test_phoenix_client.py  test_phoenix_session.py  test_smoke.py  test_tournament.py  test_transfer_edge.py  test_transfer_promote.py  test_transfer_trial.py  test_triangular_tournament.py
web/: DESIGN.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
(+61 files in other folders)
