[project]
name = "granum"
version = "0.1.0"
description = "An immune system for medical appeals — Phoenix MCP + Gemini 3 + ADK"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Shifat Islam Santo" }]
dependencies = [
  "google-adk>=0.4.0",
  "google-cloud-aiplatform>=1.60.0",
  "arize-phoenix>=5.0.0",
  "arize-phoenix-otel>=0.6.0",
  "openinference-instrumentation-google-adk>=0.1.0",
  "mcp>=1.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "typer>=0.12.0",
  "sqlmodel>=0.0.22",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "respx>=0.21.0",
]

[project.scripts]
granum = "granum.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
